--- a/testGL.vcxproj
+++ b/testGL.vcxproj
@@ -152,11 +152,13 @@
   <ItemGroup>
     <ClCompile Include="cell.cpp" />
     <ClCompile Include="field.cpp" />
+    <ClCompile Include="food.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cell.h" />
     <ClInclude Include="field.h" />
+    <ClInclude Include="food.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
